<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/main_title" />

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:src="@drawable/time_icon" />

                <TextView
                    android:id="@+id/total_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16pt"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/invertidas_en_cultura"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12pt" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/num_series"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30pt"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/series_seguidas"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="11pt" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:src="@drawable/follow_icon" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/eps_vistos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30pt"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/episodios_vistos"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="11pt" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:src="@drawable/watch_icon" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/serie_max"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/empty"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16pt"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:gravity="center"
                    android:text="@string/serie_mas_vista"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="11pt" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:src="@drawable/heart_icon" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:text="@string/networks_title"
            android:textColor="@color/colorPrimary"
            android:textSize="12pt"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <com.anychart.AnyChartView
                android:id="@+id/bubble_chart"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:background="@android:color/transparent" />

            <ProgressBar
                android:id="@+id/progress_bubble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:text="@string/genres_title"
            android:textColor="@color/colorPrimary"
            android:textSize="12pt"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">


            <com.anychart.AnyChartView
                android:id="@+id/pie_chart"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:background="@android:color/transparent" />

            <ProgressBar
                android:id="@+id/progress_pie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:text="@string/sign_out"
                android:textColor="@color/colorPrimary"
                android:textSize="12pt"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/logged_as" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="8pt"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/logout"
                    style="@style/Widget.AppCompat.Button.Colored.Personal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="6"
                    android:backgroundTint="@color/bgTotal"
                    android:gravity="center"
                    android:text="@string/sign_out"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/app_developed_by"
                android:gravity="center"
                android:textSize="12pt"
                android:fontFamily="@font/panpizza"
                android:textColor="#943126" />

            <ImageView
                android:layout_width="96dp"
                android:layout_weight="1"
                android:layout_height="96dp"
                android:src="@drawable/pizza_logo"
                android:contentDescription="@string/develop_logo" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>